--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,42 +13,49 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.592.0",
-    "@clerk/nextjs": "^5.0.0-beta.46",
+    "@clerk/nextjs": "^5.1.4",
+    "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.40.1",
     "@vercel/postgres": "^0.8.0",
+    "add": "^2.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.29.4",
+    "drizzle-orm": "^0.31.2",
     "geist": "^1.3.0",
-    "lucide-react": "^0.378.0",
-    "next": "^14.2.1",
-    "postgres": "^3.4.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "lucide-react": "^0.390.0",
+    "monaco-editor": "^0.49.0",
+    "next": "^14.2.3",
+    "postgres": "^3.4.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-monaco-editor": "^0.55.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
   },
   "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "drizzle-kit": "^0.21.0",
+    "@tanstack/eslint-plugin-query": "^5.35.6",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.14.2",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/parser": "^7.12.0",
+    "drizzle-kit": "^0.22.6",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
-    "pg": "^8.11.3",
-    "postcss": "^8.4.34",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
+    "pg": "^8.12.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5"
   },
   "ct3aMetadata": {
     "initVersion": "7.33.1"
