--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "eslint-plugin-drizzle": "^0.2.3",
+    "eslint-plugin-react-compiler": "^19.1.0-rc.2",
     "pg": "^8.12.0",
     "postcss": "^8.4.38",
     "prettier": "^3.3.1",
