--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
     "db:studio": "drizzle-kit studio",
     "dev": "next dev --turbo",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "billing:daemon": "bun run src/scripts/billing-daemon.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.592.0",
@@ -19,6 +20,7 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/stripe-js": "^7.3.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.40.1",
     "@vercel/postgres": "^0.8.0",
@@ -34,6 +36,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-monaco-editor": "^0.55.0",
+    "stripe": "^18.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.3"
